# computing-at-scale-demo-2025

./: Kairvi_Lodhiya.md  README.md  abhiyan-paudel.md  assignment0.md  bibek_shrestha.md  fuad-hasan.md  ickbum_kim.md  jay-gaiardelli.md  mikiel-gica.md  scott-blender.md  test.cpp  zachary-knowlan.md
Assignment0/: linear_algebra  linear_algebra.cpp  linear_algebra.h  main.cpp  matrix1.mtx  vector1.mtx
assignment0/: .gitignore  CMakeLists.txt  README.md  assignment0.md
assignment0/assets/: matrix1.txt  matrix2.txt  vector1.txt
assignment0/src/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h
assignment0/tests/: CMakeLists.txt  matrix2x2-with-comment.txt  matrix2x2.txt  test_matrix_operations.cpp  test_matrix_read_write.cpp
final-report/: README.md
